--- a/templates/tables.html
+++ b/templates/tables.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -46,7 +47,7 @@
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" >
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
       </li>
@@ -55,40 +56,39 @@
       <hr class="sidebar-divider">
 
       <!-- Heading -->
-      <div class="sidebar-heading"> Libraries
-      </div>
+      <div class="sidebar-heading"> Libraries</div>
 
       <!-- Nav Item - library 1 -->
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link">
           <i class="fas fa-fw fa-folder"></i>
           <span>xf_database</span></a>
       </li>
 
       <!-- Nav Item - library 2 -->
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link">
           <i class="fas fa-fw fa-folder"></i>
           <span>xf_fintech</span></a>
       </li>
 
       <!-- Nav Item - library 3 -->
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link">
           <i class="fas fa-fw fa-folder"></i>
           <span>xf_solver</span></a>
       </li>
 
       <!-- Nav Item - library 4 -->
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link">
           <i class="fas fa-fw fa-folder"></i>
           <span>xf_utils</span></a>
       </li>
 
       <!-- Nav Item - library 5 -->
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link">
           <i class="fas fa-fw fa-folder"></i>
           <span>xf_security</span></a>
       </li>
@@ -137,7 +137,7 @@
             <h4 class="h5 mb-2 text-gray-800">Date: </h4>
             &nbsp;&nbsp;
             <input class="input-sm form-control" type="date" name="start_date" style="width:200px;" />
-            <h4 class="h5 mb-2 text-gray-800">Version: </h4>
+            <h4 class="h5 mb-2 text-gray-800">Vitis Tool: </h4>
             <select class="browser-default custom-select" style='width:200px;'>
               <option>xf_database</option>
               <option>xf_fintech</option>
@@ -157,7 +157,6 @@
             <button class="btn btn-primary" type="button">
               <i class="fas fa-search fa-sm"></i>
             </button>
-
           </div>
           <!-- DataTales Example -->
           <div class="card shadow mb-4">
@@ -323,7 +322,7 @@
                   <thead>
                     <tr>
                       <th>Library</th>
-                      <th>Cases</th>
+                      <th>Case Name</th>
                       <th>Owner</th>
                       <th>ErrorType</th>
                       <th>Status</th>
